# sagitta

./: .gitignore  Cargo.toml  README.md  run-serrealdb-container.sh
.git-hooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: rust-check.yml
sagitta/: Cargo.toml
sagitta-api-schema/: Cargo.toml
sagitta-api-schema/src/: lib.rs  trunk.rs  workspace.rs
sagitta-api-schema/src/blob/: read.rs
sagitta-api-schema/src/trunk/: get_head.rs
sagitta-api-schema/src/v2/: create_workspace.rs  get_workspaces.rs  read_blob.rs  read_dir.rs  write_blob.rs
sagitta-api-schema/src/workspace/: create.rs  get_head.rs  list.rs
sagitta-common/: Cargo.toml
sagitta-common/src/: clock.rs  lib.rs  sha256.rs
sagitta-config-file/: Cargo.toml
sagitta-config-file/src/: lib.rs
sagitta-integration-tests/: Cargo.toml
sagitta-integration-tests/tests/: test.rs
sagitta-integration-tests/tests/snapshots/: test__1-2.snap  test__1-3.snap  test__1-4.snap  test__1-5.snap  test__1.snap  test__2-2.snap  test__2-3.snap  test__2-4.snap  test__2-5.snap  test__2.snap  test__3.snap  test__4-2.snap  test__4-3.snap  test__4-4.snap  test__4-5.snap  test__4-6.snap  test__4-7.snap  test__4-8.snap  test__4.snap  test__5.snap  test__6-2.snap  test__6-3.snap  test__6.snap  test__7-2.snap  test__7.snap  test__8.snap  test__9-2.snap  test__9-3.snap  test__9-4.snap  test__9-5.snap  test__9-6.snap  test__9.snap
sagitta-local-api-client/: Cargo.toml
sagitta-local-api-client/src/: lib.rs
sagitta-local-api-schema/: Cargo.toml
sagitta-local-api-schema/src/v1/: sync.rs
sagitta-local-server/: Cargo.toml
sagitta-local-server/src/: api.rs  api_state.rs  lib.rs
sagitta-local-server/src/api/v1/: sync.rs
sagitta-local-system-workspace/: Cargo.toml
sagitta-local-system-workspace/src/: lib.rs
sagitta-local-user-workspace/: Cargo.toml
sagitta-objects/: Cargo.toml
sagitta-objects-store/: Cargo.toml
sagitta-objects-store/src/: file_store.rs  lib.rs  sagitta_objects_store.rs
sagitta-objects/src/: lib.rs
sagitta-remote-api-client/: Cargo.toml
sagitta-remote-api-client/src/: lib.rs
sagitta-remote-api-schema/: Cargo.toml
sagitta-remote-api-schema/src/v2/: commit.rs  get_attr.rs  get_file_blob_id.rs  get_workspace_id_from_name.rs  sync_files_with_workspace.rs
sagitta-remote-server/: Cargo.toml
sagitta-remote-server/src/: api.rs
sagitta-remote-server/src/api/: v2.rs
sagitta-remote-server/src/api/v2/: commit.rs  get_attr.rs  get_workspace_id_from_name.rs  get_workspaces.rs  read_dir.rs  sync_files_with_workspace.rs
sagitta-remote-system-archive/: Cargo.toml
sagitta-remote-system-db/: Cargo.toml
sagitta-remote-system-db/src/: db.rs  lib.rs  sqlite.rs
sagitta-remote-system-db/tests/: test_sqlite.rs
sagitta-remote-system-db/tests/snapshots/: test_sqlite__sqlite_workspace_1-2.snap  test_sqlite__sqlite_workspace_1-3.snap  test_sqlite__sqlite_workspace_1-4.snap  test_sqlite__sqlite_workspace_1-5.snap  test_sqlite__sqlite_workspace_1.snap  test_sqlite__sqlite_workspace_2-2.snap  test_sqlite__sqlite_workspace_2.snap  test_sqlite__sqlite_workspace_3-2.snap  test_sqlite__sqlite_workspace_3.snap  test_sqlite__sqlite_workspace_4-2.snap  test_sqlite__sqlite_workspace_4-3.snap  test_sqlite__sqlite_workspace_4-4.snap  test_sqlite__sqlite_workspace_4-6.snap  test_sqlite__sqlite_workspace_4.snap  test_sqlite__sqlite_workspace_5-10.snap  test_sqlite__sqlite_workspace_5-11.snap  test_sqlite__sqlite_workspace_5-13.snap  test_sqlite__sqlite_workspace_5-14.snap  test_sqlite__sqlite_workspace_5-15.snap  test_sqlite__sqlite_workspace_5-16.snap  test_sqlite__sqlite_workspace_5-17.snap  test_sqlite__sqlite_workspace_5-18.snap  test_sqlite__sqlite_workspace_5-19.snap  test_sqlite__sqlite_workspace_5-20.snap  test_sqlite__sqlite_workspace_5-21.snap  test_sqlite__sqlite_workspace_5-22.snap  test_sqlite__sqlite_workspace_5-23.snap  test_sqlite__sqlite_workspace_5-24.snap  test_sqlite__sqlite_workspace_5-25.snap  test_sqlite__sqlite_workspace_5-27.snap  test_sqlite__sqlite_workspace_5-28.snap  test_sqlite__sqlite_workspace_5-3.snap  test_sqlite__sqlite_workspace_5-30.snap  test_sqlite__sqlite_workspace_5-5.snap  test_sqlite__sqlite_workspace_5-6.snap  test_sqlite__sqlite_workspace_5-7.snap  test_sqlite__sqlite_workspace_5-8.snap  test_sqlite__sqlite_workspace_5-9.snap  test_sqlite__sqlite_workspace_5.snap  test_sqlite__sqlite_workspace_6-10.snap  (+9 more)
sagitta-remote-system-workspace/: Cargo.toml
sagitta-remote-system-workspace/src/: lib.rs
sagitta-server/: Cargo.toml
sagitta-server/src/: api.rs  lib.rs  server_files_manager.rs  state.rs  tools.rs
sagitta-server/src/api/blob/: read.rs
sagitta-server/src/api/trunk/: get_head.rs
sagitta-server/src/api/v2/: commit.rs  create_workspace.rs  get_attr.rs  get_file_blob_id.rs  get_workspaces.rs  read_blob.rs  read_dir.rs  sync_files_with_workspace.rs  write_blob.rs
sagitta-server/src/api/workspace/: create.rs  get_head.rs  list.rs
sagitta-web/: Cargo.toml  Dioxus.toml
sagitta-web/src/: main.rs
sagitta/src/: api.rs  api_client.rs  args.rs  fs.rs  lib.rs  local_api_client.rs  state.rs  tools.rs
sagitta/src/api/trunk/: get_head.rs
sagitta/src/api/v1/: sync.rs
sagitta/tests/: test.rs
sagitta/tests/snapshots/: test__1-2.snap  test__1-3.snap  test__1-4.snap  test__1-5.snap  test__1.snap
test-tools/: run-surrealdb-test-container.sh
