[workspace]
resolver = "2"
members = [
    "sagitta",
    "sagitta-common",
    "sagitta-integration-tests",
    "sagitta-local-api-schema",
    "sagitta-local-server",
    "sagitta-local-system-workspace",
    "sagitta-remote-api-schema",
    "sagitta-remote-server",
    "sagitta-remote-system-db",
    "sagitta-remote-system-workspace",
    "sagitta-web",
]

[workspace.dependencies]
actix-web = { version = "4.6.0" }
base64 = "0.22.1"
brotli = "3.5.0"
clap = { version = "4.5.4", features = ["derive"] }
chrono = "0.4.38"
dotenvy = { version = "0.15.7" }
env_logger = "0.11.3"
fuser = { version = "0.14.0", features = ["serializable"] }
insta = "1.39.0"
libc = "0.2.155"
log = "0.4.21"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_pcg = "0.3.1"
rusqlite = { version = "0.31.0", features = ["bundled", "chrono"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = { version = "1.0.117" }
serde_cbor = "0.11.2"
serial_test = "3.1.1"
sha2 = "0.10.8"
tempfile = "3.10.1"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
ureq = { version = "2.9.7", features = ["json"] }

sagitta = { path = "sagitta" }
sagitta-common = { path = "sagitta-common" }
sagitta-integration-tests = { path = "sagitta-integration-tests" }
sagitta-local-api-schema = { path = "sagitta-local-api-schema" }
sagitta-local-server = { path = "sagitta-local-server" }
sagitta-local-system-workspace = { path = "sagitta-local-system-workspace" }
sagitta-remote-api-schema = { path = "sagitta-remote-api-schema" }
sagitta-remote-server = { path = "sagitta-remote-server" }
sagitta-remote-system-db = { path = "sagitta-remote-system-db" }
sagitta-remote-system-workspace = { path = "sagitta-remote-system-workspace" }
