[workspace]
resolver = "2"
members = [
    "sagitta",
    "sagitta-common",
    "sagitta-config-file",
    "sagitta-integration-tests",
    "sagitta-local-api-client",
    "sagitta-local-api-schema",
    "sagitta-local-server",
    "sagitta-local-system-workspace",
    "sagitta-remote-api-client",
    "sagitta-remote-api-schema",
    "sagitta-remote-server",
    "sagitta-remote-system-db",
    "sagitta-remote-system-workspace",
    "sagitta-web",
]

[workspace.dependencies]
actix-cors = "0.7.0"
actix-web = { version = "4.9.0" }
base64 = "0.22.1"
brotli = "3.5.0"
clap = { version = "4.5.17", features = ["derive"] }
chrono = "0.4.38"
dioxus = { version = "0.5", features = ["web", "router"] }
dotenvy = { version = "0.15.7" }
env_logger = "0.11.5"
fuser = { version = "0.14.0", features = ["serializable"] }
gloo-net = "0.5.0"
insta = "1.39.0"
libc = "0.2.159"
log = "0.4.22"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_pcg = "0.3.1"
rusqlite = { version = "0.31.0", features = ["bundled", "chrono"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128" }
serial_test = "3.1.1"
sha2 = "0.10.8"
tempfile = "3.12.0"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.19"
ureq = { version = "2.10.1", features = ["json"] }

sagitta = { path = "sagitta" }
sagitta-common = { path = "sagitta-common" }
sagitta-config-file = { path = "sagitta-config-file" }
sagitta-integration-tests = { path = "sagitta-integration-tests" }
sagitta-local-api-schema = { path = "sagitta-local-api-schema" }
sagitta-local-api-client = { path = "sagitta-local-api-client" }
sagitta-local-server = { path = "sagitta-local-server" }
sagitta-local-system-workspace = { path = "sagitta-local-system-workspace" }
sagitta-remote-api-client = { path = "sagitta-remote-api-client" }
sagitta-remote-api-schema = { path = "sagitta-remote-api-schema" }
sagitta-remote-server = { path = "sagitta-remote-server" }
sagitta-remote-system-db = { path = "sagitta-remote-system-db" }
sagitta-remote-system-workspace = { path = "sagitta-remote-system-workspace" }
