[package]
name = "sagitta-integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
insta = { workspace = true }
sagitta = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
sagitta-common = { workspace = true }
sagitta-objects = { workspace = true }
sagitta-server = { workspace = true }
sagitta-local-system-workspace = { workspace = true }
