[package]
name = "sagitta-remote-system-db"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_cbor = { workspace = true }
surrealdb = { workspace = true }

sagitta-objects = { workspace = true }
sagitta-common = { workspace = true }

[lints.clippy]
unwrap_used = { level = "deny" }
