[package]
name = "sagitta-remote-system-db"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = { workspace = true }
chrono = { workspace = true }
insta = { workspace = true }
rand = { workspace = true }
rand_pcg = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
tempfile = { workspace = true }

sagitta-common = { workspace = true }
