[package]
name = "sagitta-remote-system-workspace"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { workspace = true }
serde = { workspace = true }
serde_cbor = { workspace = true }

sagitta-common = { workspace = true }
sagitta-remote-system-db = { workspace = true }

[lints.clippy]
unwrap_used = { level = "deny" }
