[package]
name = "sagitta-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true }

sagitta-api-schema = { workspace = true }
sagitta-common = { workspace = true }
sagitta-objects = { workspace = true }
sagitta-remote-system-db = { workspace = true }
