[package]
name = "sagitta-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
tempfile = { workspace = true }

sagitta-common = { workspace = true }
sagitta-remote-api-schema = { workspace = true }
sagitta-remote-system-workspace = { workspace = true }
sagitta-remote-system-db = { workspace = true }
