[package]
name = "sagitta-web"
version = "0.1.0"
authors = ["Masato Mori <13274198+spica314@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { workspace = true }
gloo-net = { workspace = true }
log = { workspace = true }

sagitta-remote-api-schema = { workspace = true }

# Debug
tracing = "0.1.41"
dioxus-logger = "0.6.1"
