[package]
name = "sagitta"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true }
env_logger = { workspace = true }
fuser = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
serde_cbor = { workspace = true }
ureq = { workspace = true }

sagitta-api-schema = { workspace = true }
sagitta-common = { workspace = true }
sagitta-objects = { workspace = true }
sagitta-local-system-workspace = { workspace = true }
